added navbar and added hero section

--- a/index.html
+++ b/index.html
@@ -1,25 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS link -->
-     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+
+    <title>Knowledge-Vault</title>
 </head>
+
 <body>
-    <header>
-        <nav>
 
+    <header class="header_container">
+        <nav class="nav_section container">
+            <img src="./assets/logo-navbar.png" alt="">
+            <ul>
+                <li><a href="">Features</a></li>
+                <li><a href="">How It Work</a></li>
+                <li><a href="">Why It's Different</a></li>
+            </ul>
+            <button class="all_btn">Get Early Access</button>
         </nav>
-
     </header>
 
     <main>
 
+        <!-- hero section start here -->
+        <section class="hero_parent">
+            <div class="hero_container container">
+                <!-- <div class="hero_info"> -->
+                    <button class="hero_btn">Early Access Now Open</button>
+                    <h2>Structured thinking, <br><span>not just note-taking.</span></h2>
+                    <p>
+                        A private space to store notes, links, and learning summaries — designed to <br>
+                        help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                    </p>
+                    <div class="hero_section_btn">
+                        <button class="all_btn">Start Building Your Vault</button>
+                        <button class="all_btn_2">See How It Works</button>
+                    </div>
+                <!-- </div> -->
+            </div>
+        </section>
+        <!-- hero section end here -->
     </main>
 
     <footer>
 
     </footer>
 </body>
+
 </html>
