added notes section

--- a/index.html
+++ b/index.html
@@ -35,21 +35,66 @@
         <!-- hero section start here -->
         <section class="hero_parent">
             <div class="hero_container container">
-                <!-- <div class="hero_info"> -->
-                    <button class="hero_btn">Early Access Now Open</button>
-                    <h2>Structured thinking, <br><span>not just note-taking.</span></h2>
-                    <p>
-                        A private space to store notes, links, and learning summaries — designed to <br>
-                        help you think clearly, connect ideas, and turn learning into long-term knowledge.
-                    </p>
-                    <div class="hero_section_btn">
-                        <button class="all_btn">Start Building Your Vault</button>
-                        <button class="all_btn_2">See How It Works</button>
-                    </div>
-                <!-- </div> -->
+                <button class="hero_btn">Early Access Now Open</button>
+                <h2>Structured thinking, <br><span>not just note-taking.</span></h2>
+                <p>
+                    A private space to store notes, links, and learning summaries — designed to <br>
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                </p>
+                <div class="hero_section_btn">
+                    <button class="all_btn">Start Building Your Vault</button>
+                    <button class="all_btn_2">See How It Works</button>
+                </div>
             </div>
         </section>
         <!-- hero section end here -->
+
+        <!-- notes section start here -->
+        <section>
+            
+            <div class="notes_container container">
+
+                <div class="notes_text">
+                    <h2> Notes don't fail, Structure does.</h2>
+                    <p>
+                        You're not bad at learning. Your tools just weren't built for how knowledge actually works.
+                    </p>
+                </div>
+
+                <div class="notes_card_container">
+                    <div class="notes_card">
+                        <img src="./assets/Vector.png" alt="">
+                        <h2>Scattered notes</h2>
+                        <p>
+                            Your ideas live in 10 different apps, none of them connected.
+                        </p>
+                    </div>
+                    <div class="notes_card">
+                        <img src="./assets/Bookmarks.png" alt="">
+                        <h2>Bookmark overload</h2>
+                        <p>
+                            Hundreds of saved links you'll never revisit or remember.
+                        </p>
+                    </div>
+                    <div class="notes_card">
+                        <img src="./assets/Brain.png" alt="">
+                        <h2>No idea connections</h2>
+                        <p>
+                            Insights stay isolated, never building into bigger understanding.
+                        </p>
+                    </div>
+                    <div class="notes_card">
+                        <img src="./assets/Info.png" alt="">
+                        <h2>Forgetting what
+                            you learned</h2>
+                        <p>
+                            Knowledge fades because there's no system to retain it.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- notes section end here -->
     </main>
 
     <footer>
