added second brain section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- hero section start here -->
         <section class="hero_parent">
             <div class="hero_container container">
-                <button class="hero_btn">Early Access Now Open</button>
+                <button class="hero_btn"><img src="./assets/banner-icon.png" alt="">Early Access Now Open</button>
                 <h2>Structured thinking, <br><span>not just note-taking.</span></h2>
                 <p>
                     A private space to store notes, links, and learning summaries — designed to <br>
@@ -51,7 +51,7 @@
 
         <!-- notes section start here -->
         <section>
-            
+
             <div class="notes_container container">
 
                 <div class="notes_text">
@@ -95,6 +95,29 @@
             </div>
         </section>
         <!-- notes section end here -->
+
+        <!-- second brain section start here -->
+        <section>
+            <div class="second_brain_container container">
+                <div class="second_brain_image">
+                    <img src="./assets/knowledge.png" alt="">
+                </div>
+                <div class="second_brain_text">
+                    <p class="sub_title_p">The Solution</p>
+                    <h2>Your second brain, <br>structured by design.</h2>
+                        <p>
+                            Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.
+                        </p>
+                        <div class="second_text">
+                            <p><img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</p>
+                            <p><img src="./assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</p>
+                            <p><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</p>
+                            <p><img src="./assets/CheckCircle.png" alt="">Find anything instantly with semantic search</p>
+                        </div>
+                </div>
+            </div>
+        </section>
+        <!-- second brain section end here -->
     </main>
 
     <footer>
