added ready to think more section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
             </div>
         </section>
         <!-- second brain section end here -->
+
+        <!-- ready to think More section start here -->
+         <section class="ready_to_think_parent">
+            <div class="ready_to_think_container container">
+                <h2>Ready to think more clearly?</h2>
+                <p>
+                    Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.
+                </p>
+                <button class="all_btn">Get Early Access</button>
+                <p>Free during early access • No credit card needed</p>
+            </div>
+         </section>
+        <!-- ready to think More section end here -->
     </main>
 
     <footer>
