--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
 
+        <!-- font awesome cdn -->
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Knowledge-Vault</title>
 </head>
 
@@ -134,7 +137,25 @@
     </main>
 
     <footer>
-
+        <section class="footer_perant">
+            <div class="footer_container container">
+                <img src="./assets/logo-footer.png" alt="">
+                <div class="social_icon_container">
+                    <p>Social Links</p>
+                    <div class="social_icon">
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <hr class="container hr">
+            <div class="footer_copy_right container">
+                <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+            </div>
+        </section>
     </footer>
 </body>
 
