--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <!-- hero section start here -->
         <section class="hero_parent">
             <div class="hero_container container">
-                <button class="hero_btn"><img src="./assets/banner-icon.png" alt="">Early Access Now Open</button>
+                <button class="hero_btn"><img src="./assets/banner-icon.png" alt=""> Early Access Now Open</button>
                 <h2>Structured thinking, <br><span>not just note-taking.</span></h2>
                 <p>
                     A private space to store notes, links, and learning summaries — designed to <br>
                     help you think clearly, connect ideas, and turn learning into long-term knowledge.
                 </p>
                 <div class="hero_section_btn">
-                    <button class="all_btn">Start Building Your Vault</button>
-                    <button class="all_btn_2">See How It Works</button>
+                    <button class="all_btn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+                    <button class="all_btn_2"><i class="fa-solid fa-play"></i> See How It Works</button>
                 </div>
             </div>
         </section>
@@ -112,10 +112,10 @@
                             Personal Knowledge Vault isn't another note-taking app. zIt's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.
                         </p>
                         <div class="second_text">
-                            <p><img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</p>
-                            <p><img src="./assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</p>
-                            <p><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</p>
-                            <p><img src="./assets/CheckCircle.png" alt="">Find anything instantly with semantic search</p>
+                            <p><img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</p>
+                            <p><img src="./assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</p>
+                            <p><img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</p>
+                            <p><img src="./assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</p>
                         </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <p>
                     Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.
                 </p>
-                <button class="all_btn">Get Early Access</button>
+                <button class="all_btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
                 <p>Free during early access • No credit card needed</p>
             </div>
          </section>
